[gd_scene load_steps=9 format=3 uid="uid://qex17x66s1qr"]

[ext_resource type="Texture2D" uid="uid://yyf06851xdl0" path="res://Art/Sprites/DeveloperArt/crafting menu.png" id="1_78n27"]
[ext_resource type="Script" path="res://Modules/Crafting/crafting_ui.gd" id="1_ifwuu"]
[ext_resource type="Texture2D" uid="uid://domjwy25hn4t2" path="res://Art/Sprites/DeveloperArt/CraftButton.png" id="2_i2mh5"]
[ext_resource type="Texture2D" uid="uid://c72pocmdioilh" path="res://Art/Sprites/DeveloperArt/CraftButtonPressed.png" id="3_t2k8j"]
[ext_resource type="Script" path="res://Modules/Crafting/VCraftingContainer.gd" id="5_iumu1"]
[ext_resource type="PackedScene" uid="uid://daplt4hic88fg" path="res://Modules/Crafting/CraftingStation.tscn" id="6_oc3ja"]
[ext_resource type="Script" path="res://Modules/Crafting/RecipeUI.gd" id="6_ub6vo"]
[ext_resource type="PackedScene" uid="uid://cscsl1rk24rrf" path="res://Modules/Crafting/recipe_ui_slot.tscn" id="8_f3hp2"]

[node name="Crafting_UI" type="Node2D"]
script = ExtResource("1_ifwuu")

[node name="CraftMenu" type="TextureRect" parent="."]
offset_left = -124.0
offset_top = -82.5
offset_right = 124.0
offset_bottom = 82.5
scale = Vector2(0.999069, 1)
texture = ExtResource("1_78n27")

[node name="CraftButton" type="TextureButton" parent="."]
offset_left = -124.0
offset_top = -99.0
offset_right = -84.0
offset_bottom = -59.0
scale = Vector2(2.67909, 2.67909)
texture_normal = ExtResource("2_i2mh5")
texture_pressed = ExtResource("3_t2k8j")

[node name="CraftingContainer" type="ScrollContainer" parent="."]
offset_left = -121.0
offset_top = -80.0
offset_right = 121.0
offset_bottom = 79.0
vertical_scroll_mode = 0

[node name="VCraftingContainer" type="VBoxContainer" parent="CraftingContainer"]
layout_mode = 2
script = ExtResource("5_iumu1")

[node name="CraftingStation" parent="CraftingContainer/VCraftingContainer" instance=ExtResource("6_oc3ja")]

[node name="RecipeContainer" type="ScrollContainer" parent="."]
offset_left = -1.0
offset_top = -80.0
offset_right = 120.0
offset_bottom = 79.0
vertical_scroll_mode = 0

[node name="RecipeUI" type="Control" parent="RecipeContainer"]
layout_mode = 2
script = ExtResource("6_ub6vo")

[node name="NinePatchRect" type="NinePatchRect" parent="RecipeContainer/RecipeUI"]
layout_mode = 0
offset_right = 81.0
offset_bottom = 106.0

[node name="GridContainer" type="GridContainer" parent="RecipeContainer/RecipeUI/NinePatchRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -27.5
offset_top = 5.0
offset_right = 7.5
offset_bottom = 40.0
grow_horizontal = 2
scale = Vector2(2.8, 2.8)
columns = 3

[node name="Recipe_UI_Slot1" parent="RecipeContainer/RecipeUI/NinePatchRect/GridContainer" instance=ExtResource("8_f3hp2")]
layout_mode = 2

[node name="Recipe_UI_Slot2" parent="RecipeContainer/RecipeUI/NinePatchRect/GridContainer" instance=ExtResource("8_f3hp2")]
layout_mode = 2

[node name="Recipe_UI_Slot3" parent="RecipeContainer/RecipeUI/NinePatchRect/GridContainer" instance=ExtResource("8_f3hp2")]
layout_mode = 2

[node name="Recipe_UI_Slot4" parent="RecipeContainer/RecipeUI/NinePatchRect/GridContainer" instance=ExtResource("8_f3hp2")]
layout_mode = 2

[node name="Recipe_UI_Slot5" parent="RecipeContainer/RecipeUI/NinePatchRect/GridContainer" instance=ExtResource("8_f3hp2")]
layout_mode = 2

[node name="Recipe_UI_Slot6" parent="RecipeContainer/RecipeUI/NinePatchRect/GridContainer" instance=ExtResource("8_f3hp2")]
layout_mode = 2

[node name="Recipe_UI_Slot7" parent="RecipeContainer/RecipeUI/NinePatchRect/GridContainer" instance=ExtResource("8_f3hp2")]
layout_mode = 2

[node name="Recipe_UI_Slot8" parent="RecipeContainer/RecipeUI/NinePatchRect/GridContainer" instance=ExtResource("8_f3hp2")]
layout_mode = 2

[node name="Recipe_UI_Slot9" parent="RecipeContainer/RecipeUI/NinePatchRect/GridContainer" instance=ExtResource("8_f3hp2")]
layout_mode = 2
